@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2005, 2023 Wolfgang Schramm and Contributors
+ * Copyright (C) 2005, 2024 Wolfgang Schramm and Contributors
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -44,7 +44,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import net.tourbook.Messages;
 import net.tourbook.OtherMessages;
@@ -184,55 +183,61 @@ public class RawDataManager {
     * <p>
     * Only the KeySet is used
     */
-   private static final ConcurrentHashMap<String, Object>       _allInvalidFiles                         = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, Object>       _allInvalidFiles                          = new ConcurrentHashMap<>();
 
    /**
     * Contains alternative filepaths from previous re-imported tours, the key is the {@link IPath}.
     * <p>
     * Only the KeySet is used
     */
-   private static final ConcurrentHashMap<IPath, Object>        _allPreviousReimportFolders              = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<IPath, Object>        _allPreviousReimportFolders               = new ConcurrentHashMap<>();
 
    private static volatile IPath                                _previousReimportFolder;
 
    /**
     * Contains tours which are imported or received and displayed in the import view.
     */
-   private static final ConcurrentHashMap<Long, TourData>       _allImported_Tours                       = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<Long, TourData>       _allImported_Tours                        = new ConcurrentHashMap<>();
 
    /**
     * Contains the filenames for all imported files which are displayed in the import view
     */
-   private static final ConcurrentHashMap<String, String>       _allImported_FileNames                   = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, String>       _allImported_FileNames                    = new ConcurrentHashMap<>();
 
    /**
     * Contains filenames which are not directly imported but is imported from other imported files
     */
-   private static final ConcurrentHashMap<String, String>       _allImported_FileNamesChildren           = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, String>       _allImported_FileNamesChildren            = new ConcurrentHashMap<>();
 
    /**
     * Contains {@link TourType}'s which are imported and could be saved or not, key is the tour type
     * name in UPPERCASE
     */
-   private static final ConcurrentHashMap<String, TourType>     _allImported_NewTourTypes                = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, TourType>     _allImported_NewTourTypes                 = new ConcurrentHashMap<>();
 
    /**
     * Contains {@link TourTag}'s which are imported and could be saved or not, key is the tour tag
     * name in UPPERCASE
     */
-   private static final ConcurrentHashMap<String, TourTag>      _allImported_NewTourTags                 = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, TourTag>      _allImported_NewTourTags                  = new ConcurrentHashMap<>();
 
    /**
     * Contains {@link TourTag}'s which are imported and could be saved or not, key is the tour tag
     * name + contained id in notes, all is in UPPERCASE
     */
-   private static final ConcurrentHashMap<String, TourTag>      _allImported_NewTourTags_WithContainedId = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, TourTag>      _allImported_NewTourTags_WithContainedId  = new ConcurrentHashMap<>();
+
+   /**
+    * Contains {@link DeviceSensor}'s which are imported and could be saved or not, key is the
+    * device name in UPPERCASE
+    */
+   private static final ConcurrentHashMap<String, DeviceSensor> _allImported_NewDeviceSensors_ByName      = new ConcurrentHashMap<>();
 
    /**
     * Contains {@link DeviceSensor}'s which are imported and could be saved or not, key is the
     * serial number name in UPPERCASE
     */
-   private static final ConcurrentHashMap<String, DeviceSensor> _allImported_NewDeviceSensors            = new ConcurrentHashMap<>();
+   private static final ConcurrentHashMap<String, DeviceSensor> _allImported_NewDeviceSensors_BySerialNum = new ConcurrentHashMap<>();
 
    //
    /**
@@ -343,7 +348,6 @@ public class RawDataManager {
       TIME_SLICES__POWER_AND_SPEED, //
       TIME_SLICES__POWER_AND_PULSE, //
       TIME_SLICES__RUNNING_DYNAMICS, //
-      TIME_SLICES__START_END_LOCATION, //
       TIME_SLICES__SWIMMING, //
       TIME_SLICES__TEMPERATURE_FROMDEVICE, //
       TIME_SLICES__TRAINING, //
@@ -379,12 +383,15 @@ public class RawDataManager {
    }
 
    /**
-    * SYNCHRONIZED: Create new device sensor and keep it in {@link #_allImported_NewDeviceSensors}
-    * or uses an already created sensor
+    * SYNCHRONIZED: Create new device sensor and keep it in
+    * {@link #_allImported_NewDeviceSensors_BySerialNum} or
+    * {@value #_allImported_NewDeviceSensors_ByName} or use an already created sensor
     *
-    * @param sensorType
+    * @param manufacturerNumber
+    * @param manufacturerName
+    * @param productNumber
+    * @param productName
     * @param serialNumber
-    * @param sensorSerialNumberKey
     *
     * @return Returns the new device sensor
     */
@@ -396,21 +403,103 @@ public class RawDataManager {
 
                                                               final String serialNumber) {
 
-      final String serialNumberKey = serialNumber.toUpperCase();
+      if (serialNumber == null) {
+
+         final DeviceSensor newSensor = createDeviceSensor_ByName(
+
+               manufacturerNumber,
+               manufacturerName,
+               productNumber,
+               productName);
+
+         return newSensor;
+
+      } else {
+
+         return createDeviceSensor_BySerialNum(
+
+               manufacturerNumber,
+               manufacturerName,
+               productNumber,
+               productName,
+               serialNumber);
+      }
+   }
+
+   private static DeviceSensor createDeviceSensor_ByName(final int manufacturerNumber,
+                                                         final String manufacturerName,
+                                                         final int productNumber,
+                                                         final String productName) {
+
+      final String deviceKeyByName = DeviceSensor.createSensorKeyByName(
+            manufacturerName,
+            manufacturerNumber,
+            productNumber,
+            productName);
 
       /*
        * Check imported sensors
        */
-      final DeviceSensor importedSensor = _allImported_NewDeviceSensors.get(serialNumberKey);
+      final DeviceSensor importedSensor = _allImported_NewDeviceSensors_ByName.get(deviceKeyByName);
       if (importedSensor != null) {
+
          return importedSensor;
       }
 
       /*
        * Check if sensor is still unavailable in the database
        */
-      final DeviceSensor deviceSensor = TourDatabase.getAllDeviceSensors_BySerialNo().get(serialNumberKey);
+      final Collection<DeviceSensor> allDeviceSensor = TourDatabase.getAllDeviceSensors_BySensorID().values();
+      for (final DeviceSensor deviceSensor : allDeviceSensor) {
+
+         final String sensorNameKey = deviceSensor.getSensorKeyByName();
+
+         if (sensorNameKey.equals(deviceKeyByName)) {
+
+            return deviceSensor;
+         }
+      }
+
+      /*
+       * Sensor is for sure not available -> create it now
+       */
+      final DeviceSensor newSensor = new DeviceSensor(
+
+            manufacturerNumber,
+            manufacturerName,
+
+            productNumber,
+            productName,
+
+            null);
+
+      _allImported_NewDeviceSensors_ByName.put(deviceKeyByName, newSensor);
+
+      return newSensor;
+   }
+
+   private static DeviceSensor createDeviceSensor_BySerialNum(final int manufacturerNumber,
+                                                              final String manufacturerName,
+                                                              final int productNumber,
+                                                              final String productName,
+                                                              final String serialNumber) {
+      final String serialNumberKey = serialNumber.toUpperCase();
+
+      /*
+       * Check imported sensors
+       */
+      final DeviceSensor importedSensor = _allImported_NewDeviceSensors_ByName.get(serialNumberKey);
+      if (importedSensor != null) {
+
+         return importedSensor;
+      }
+
+      /*
+       * Check if sensor is still unavailable in the database
+       */
+      final DeviceSensor deviceSensor = TourDatabase.getAllDeviceSensors_BySerialNum().get(serialNumberKey);
       if (deviceSensor != null) {
+
          return deviceSensor;
       }
 
@@ -427,7 +516,7 @@ public class RawDataManager {
 
             serialNumber);
 
-      _allImported_NewDeviceSensors.put(serialNumberKey, newSensor);
+      _allImported_NewDeviceSensors_BySerialNum.put(serialNumberKey, newSensor);
 
       return newSensor;
    }
@@ -684,11 +773,11 @@ public class RawDataManager {
 
          final String oldAirQuality = oldTourData.getWeather_AirQuality_TextIndex() == 0
                ? UI.EMPTY_STRING
-               : IWeather.airQualityTexts[oldTourData.getWeather_AirQuality_TextIndex()];
+               : IWeather.AIR_QUALITY_TEXT[oldTourData.getWeather_AirQuality_TextIndex()];
 
          final String newAirQuality = newTourData.getWeather_AirQuality_TextIndex() == 0
                ? UI.EMPTY_STRING
-               : IWeather.airQualityTexts[newTourData.getWeather_AirQuality_TextIndex()];
+               : IWeather.AIR_QUALITY_TEXT[newTourData.getWeather_AirQuality_TextIndex()];
 
          previousData.add(UI.EMPTY_STRING
 
@@ -1589,11 +1678,6 @@ public class RawDataManager {
             dataToModifyDetails.add(Messages.Tour_Data_Text_SpeedValues);
          }
 
-         // Start/end location
-         if (isAllTimeSlices || tourValueType == TourValueType.TIME_SLICES__START_END_LOCATION) {
-            dataToModifyDetails.add(Messages.Tour_Data_Text_StartEndLocation);
-         }
-
          // Running Dynamics
          if (isAllTimeSlices || tourValueType == TourValueType.TIME_SLICES__RUNNING_DYNAMICS) {
             dataToModifyDetails.add(Messages.Tour_Data_Text_RunningDynamicsValues);
@@ -1733,7 +1817,7 @@ public class RawDataManager {
             updateTourData_InImportView_FromDb(monitor);
 
             // reselect tours, run in UI thread
-            display.asyncExec(tourViewer::reloadViewer);
+            display.asyncExec(() -> tourViewer.reloadViewer());
          }
       };
 
@@ -1830,13 +1914,6 @@ public class RawDataManager {
                tourData.setPowerSerie(null);
                tourData.setPower_Avg(0);
                tourData.setSpeedSerie(null);
-               break;
-
-            case TIME_SLICES__START_END_LOCATION:
-
-               tourData.setTourStartPlace(null);
-               tourData.setTourEndPlace(null);
-
                break;
 
             case TIME_SLICES__TEMPERATURE_FROMDEVICE:
@@ -2142,7 +2219,7 @@ public class RawDataManager {
          /*
           * Resort files by extension priority
           */
-         Collections.sort(allImportFilePaths, this::onSortFileExtensions);
+         Collections.sort(allImportFilePaths, (o1, o2) -> onSortFileExtensions(o1, o2));
 
          importTours_FromMultipleFiles_10(allImportFilePaths, importState_Process);
 
@@ -2329,7 +2406,7 @@ public class RawDataManager {
 
       if (FileSystemManager.isFileFromTourBookFileSystem(osFilePath)) {
 
-         importFile = FileSystemManager.CopyLocally(osFilePath);
+         importFile = FileSystemManager.copyLocally(osFilePath);
       }
 
       final Map<Long, TourData> allImportedToursFromOneFile = new HashMap<>();
@@ -3059,7 +3136,7 @@ public class RawDataManager {
                                                          final ImportState_Process importState_Process,
                                                          final ReImportStatus reImportStatus) {
 
-      final Shell activeShell = Display.getDefault().getActiveShell();
+      final Shell activeShell = TourbookPlugin.getAppShell();
 
       // during initialization there is no active shell
       if (activeShell == null) {
@@ -3660,13 +3737,13 @@ public class RawDataManager {
          final long[] pausedTime_Start = reimportedTourData.getPausedTime_Start();
          if (pausedTime_Start != null && pausedTime_Start.length > 0) {
 
-            final List<Long> listPausedTime_Start = Arrays.stream(pausedTime_Start).boxed().collect(Collectors.toList());
-            final List<Long> listPausedTime_End = Arrays.stream(reimportedTourData.getPausedTime_End()).boxed().collect(Collectors.toList());
+            final List<Long> listPausedTime_Start = Arrays.stream(pausedTime_Start).boxed().toList();
+            final List<Long> listPausedTime_End = Arrays.stream(reimportedTourData.getPausedTime_End()).boxed().toList();
 
             final long[] pausedTime_Data = reimportedTourData.getPausedTime_Data();
             final List<Long> listPausedTime_Data = pausedTime_Data == null
                   ? null
-                  : Arrays.stream(pausedTime_Data).boxed().collect(Collectors.toList());
+                  : Arrays.stream(pausedTime_Data).boxed().toList();
 
             oldTourData.finalizeTour_TimerPauses(
                   listPausedTime_Start,
@@ -3715,7 +3792,8 @@ public class RawDataManager {
       _allImported_NewTourTags_WithContainedId.clear();
       _allImported_NewTourTypes.clear();
 
-      _allImported_NewDeviceSensors.clear();
+      _allImported_NewDeviceSensors_ByName.clear();
+      _allImported_NewDeviceSensors_BySerialNum.clear();
    }
 
    public void removeTours(final TourData[] removedTours) {
@@ -3913,7 +3991,7 @@ public class RawDataManager {
                new ProgressMonitorDialog(Display.getDefault().getActiveShell()).run(
                      true, // fork
                      false, // cancelable
-                     this::updateTourData_InImportView_FromDb_Runnable);
+                     monitor1 -> updateTourData_InImportView_FromDb_Runnable(monitor1));
 
             } else {
 
@@ -3992,9 +4070,7 @@ public class RawDataManager {
       _loadingTour_CountDownLatch.await();
 
       TourDatabase.saveTour_PostSaveActions_Concurrent_2_ForAllTours(
-            allSavedTourIds
-                  .stream()
-                  .collect(Collectors.toList()));
+            allSavedTourIds.stream().toList());
 
       // prevent async error
       Display.getDefault().syncExec(() -> TourManager.fireEvent(TourEventId.CLEAR_DISPLAYED_TOUR, null, null));
